--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -67,7 +67,7 @@
 .bg-blue-300{--bg-opacity:1;background-color:#90cdf4;background-color:rgba(144, 205, 244, var(--bg-opacity))}
 .bg-blue-400{--bg-opacity:1;background-color:#63b3ed;background-color:rgba(99, 179, 237, var(--bg-opacity))}
 .bg-blue-500{--bg-opacity:1;background-color:#4299e1;background-color:rgba(66, 153, 225, var(--bg-opacity))}
-.bg-blue-501{--bg-opacity:1;background-color:#5283ec;background-color:rgba(82, 131, 236, var(--bg-opacity))}
+.bg-blue-501{--bg-opacity:1;background-color:#01B065;background-color:rgba(82, 131, 236, var(--bg-opacity))}
 .bg-blue-600{--bg-opacity:1;background-color:#3182ce;background-color:rgba(49, 130, 206, var(--bg-opacity))}
 .bg-blue-700{--bg-opacity:1;background-color:#2b6cb0;background-color:rgba(43, 108, 176, var(--bg-opacity))}
 .bg-blue-701{--bg-opacity:1;background-color:#576bef;background-color:rgba(87, 107, 239, var(--bg-opacity))}
