--- a/src/static/css/uni.css
+++ b/src/static/css/uni.css
@@ -117,7 +117,7 @@ form {
 	background:#09BB07; color:#FFF;
 }
 .uni-bg-blue{
-	background:#007AFF; color:#FFF;
+	background:#01B065; color:#FFF;
 }
 /* 标题 */
 .uni-h1 {font-size: 80upx; font-weight:700;}
@@ -204,11 +204,11 @@ radio-group label, checkbox-group label{
 }
 .uni-badge-primary {
 	color: #fff;
-	background-color: #007aff
+	background-color: #01B065
 }
 .uni-badge-blue.uni-badge-inverted,
 .uni-badge-primary.uni-badge-inverted {
-	color: #007aff;
+	color: #01B065;
 	background-color: transparent
 }
 .uni-badge-green,
@@ -337,7 +337,7 @@ radio-group label, checkbox-group label{
 	color: #8f8f94;
 }
 .uni-card-link {
-	color: #007AFF;
+	color: #01B065;
 }
 
 /* 列表 */
@@ -764,7 +764,7 @@ radio-group label, checkbox-group label{
 	content: '\e438';
 }
 .feedback-submit {
-	background: #007AFF;
+	background: #01B065;
 	color: #FFFFFF;
 	margin: 20upx;
 }
@@ -867,7 +867,7 @@ radio-group label, checkbox-group label{
 }
 
 .uni-tab-bar .active {
-	color: #007AFF;
+	color: #01B065;
 }
 
 .uni-tab-bar .swiper-box {
@@ -1061,7 +1061,7 @@ radio-group label, checkbox-group label{
 }
 
 .uni-icon.uni-active {
-	color: #007aff;
+	color: #01B065;
 }
 
 .uni-icon-contact:before {
